info-window/fix: start visibility fix

--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
+  visibility: hidden;
   opacity: 0;
   transition: opacity 0.4s;
 }
